<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="uqac.natacha.food_calendar.RegisterActivity">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/profile"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />


    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView" >

        <RadioButton
            android:padding="8dp"
            android:checked="true"
            android:id="@+id/rb_entree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:padding="8dp"
            android:id="@+id/rb_plat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/rg_gender"
        app:layout_constraintStart_toStartOf="@+id/rg_gender"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/rg_gender"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="16dp"
        android:id="@+id/textInputLayout">
        <EditText
            android:id="@+id/eti_heigth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/heigth"
            android:inputType="number"
            android:textColor="@color/colorFontDark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/rg_gender"
        app:layout_constraintStart_toStartOf="@+id/rg_gender"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.062"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:id="@+id/textInputLayout2">
        <EditText
            android:id="@+id/eti_weigth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weigth"
            android:inputType="numberDecimal"
            android:textColor="@color/colorFontDark" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/rg_gender"
        app:layout_constraintStart_toStartOf="@+id/rg_gender"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        android:id="@+id/textInputLayout3">
        <EditText
            android:id="@+id/eti_number_meals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numberMeals"
            android:inputType="number"
            android:textColor="@color/colorFontDark" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_physical_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PhycsicalActivity"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        android:layout_marginTop="32dp" />

    <Spinner
        android:id="@+id/sp_physical_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_physical_activity"
        app:layout_constraintStart_toStartOf="@+id/tv_physical_activity"
        app:layout_constraintTop_toBottomOf="@+id/tv_physical_activity"
        android:layout_marginTop="8dp"></Spinner>










    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorAccent"
        android:onClick="setUserProfile"
        android:text="@string/validate"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
