<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uqac.natacha.food_calendar.AddRecipe">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_addRecipe"
        android:layout_marginBottom="8dp">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#888"
                android:scaleType="centerCrop" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                app:srcCompat="@drawable/ic_add"
                android:onClick="chooseImage"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="36dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="175dp"
                app:backgroundTint="@color/colorPrimary" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="0dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_image">
                <EditText
                    android:id="@+id/eti_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:textColor="@color/colorFontDark" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/category"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/til_name" />

            <RadioGroup
                android:id="@+id/rg_category"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tv_category" >

                <RadioButton
                    android:padding="8dp"
                    android:checked="true"
                    android:id="@+id/rb_entree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/entree" />

                <RadioButton
                    android:padding="8dp"
                    android:id="@+id/rb_plat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plat_principal" />

                <RadioButton
                    android:padding="8dp"
                    android:id="@+id/rb_dessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dessert" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/info"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/rg_category" />

            <LinearLayout
                android:id="@+id/ll_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_info">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp">
                    <EditText
                        android:id="@+id/eti_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/number"
                        android:inputType="number"
                        android:textColor="@color/colorFontDark" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp">
                    <EditText
                        android:id="@+id/eti_difficulty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/difficultyadd"
                        android:inputType="number"
                        android:textColor="@color/colorFontDark" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ll_info">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp">
                    <EditText
                        android:id="@+id/eti_preparation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/preparationTime"
                        android:inputType="number"
                        android:textColor="@color/colorFontDark" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp">
                    <EditText
                        android:id="@+id/eti_cooking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cookingTime"
                        android:inputType="number"
                        android:textColor="@color/colorFontDark" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/ingredients"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/ll_time" />

            <LinearLayout
                android:id="@+id/ll_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ingredients">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/sp_food_0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp">
                        <EditText
                            android:id="@+id/eti_quantity_0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/quantity"
                            android:inputType="numberDecimal"
                            android:textColor="@color/colorFontDark" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/btn_add_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"
                    android:layout_gravity="center_horizontal"
                    android:onClick="onAddFood"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/instructions"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/ll_ingredients" />

            <LinearLayout
                android:id="@+id/ll_instructions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_instructions">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp">
                        <EditText
                            android:id="@+id/eti_instruction_0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/step"
                            android:inputType="text"
                            android:textColor="@color/colorFontDark" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                 <ImageButton
                     android:id="@+id/btn_add_instruction"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_add"
                     android:onClick="onAddInstruction"
                     android:layout_gravity="center_horizontal"/>

            </LinearLayout>







        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_addRecipe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorAccent"
        android:onClick="addRecipe"
        android:text="@string/addRecipe"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</android.support.constraint.ConstraintLayout>
