<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="uqac.natacha.food_calendar.RecipeCategories">

    <ImageView
        android:id="@+id/arriereplan_categorie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <Button
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bouton_capsule"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:text="@string/entree"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorFontDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/btn_entree"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_plat" />

    <Button
        android:layout_width="match_parent"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:background="@drawable/bouton_capsule"
        android:backgroundTint="@android:color/white"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:text="@string/plat_principal"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorFontDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/btn_plat" />

    <Button
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bouton_capsule"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:text="@string/dessert"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorFontDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/btn_dessert"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_plat" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_add"
        android:onClick="addRecipe"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
